@@ -1,7 +1,7 @@
 ## Generators
 
 ```elixir 
-OEIS.Util.generate_function_sequences(~w(A138591), in_module: Chunky.Sequence.OEIS.Multiples)
+OEIS.Util.generate_function_sequences(~w(A005153), in_module: Chunky.Sequence.OEIS.Multiples)
 OEIS.Util.generate_list_sequences(, in_module: Chunky.Sequence.OEIS.Factors)
 ```
 
